--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 let profiles = JSON.parse(localStorage.getItem('profiles')) || {};
 let currentProfile = null;
 const months = ['January','February','March','April','May','June','July','August','September','October','November','December'];
-window.selectedType = null; // currently selected meal type
+window.selectedType = null;
 
 function saveData(){ localStorage.setItem('profiles', JSON.stringify(profiles)); }
 
@@ -112,20 +112,12 @@ function renderCalendar(){
   updateSummary(key);
 }
 
-function setSelected(type){
-  window.selectedType = type;
-}
+function setSelected(type){ window.selectedType = type; }
 
 function applyMeal(d,key,div){
-  // Clear existing styles
   div.classList.remove('dayMeal','nightMeal','bothMeal','holiday');
-
-  if(window.selectedType === null){
-    delete profiles[currentProfile].data[key].days[d];
-  } else {
-    profiles[currentProfile].data[key].days[d]=window.selectedType;
-    div.classList.add(window.selectedType);
-  }
+  if(window.selectedType === null){ delete profiles[currentProfile].data[key].days[d]; }
+  else { profiles[currentProfile].data[key].days[d]=window.selectedType; div.classList.add(window.selectedType); }
   saveData(); updateSummary(key);
 }
 
@@ -135,45 +127,6 @@ function clearMonth(){
   const m=month.value, y=year.value;
   const key=`${y}-${m}`;
   profiles[currentProfile].data[key]={ days:{} };
-  saveData(); renderCalendar();
-}
-
-function setRate(v){ profiles[currentProfile].rate=Number(v); saveData(); renderCalendar(); }
-
-function updateSummary(key){
-  let meals=0; const days=profiles[currentProfile].data[key].days;
-  for(let d in days){ if(days[d]=='bothMeal') meals+=2; else if(days[d]=='holiday') meals+=0; else meals+=1; }
-  summary.innerText=`Monthly Meals: ${meals} | Monthly Amount: ₹${meals*profiles[currentProfile].rate}`;
-}
-
-function showYearSummary(){
-  if(!currentProfile) return;
-  let y=year.value; let totalMeals=0; let html=`<h3>Year Summary (${y})</h3>`;
-  months.forEach((m,i)=>{
-    const key=`${y}-${i}`;
-    let meals=0;
-    if(profiles[currentProfile].data[key]){
-      const days=profiles[currentProfile].data[key].days;
-      for(let d in days){ if(days[d]=='bothMeal') meals+=2; else if(days[d]=='holiday') meals+=0; else meals+=1; }
-    }
-    totalMeals+=meals;
-    html+=`${m}: ${meals} meals<br>`;
-  });
-  html+=`<b>Total Year Meals:</b> ${totalMeals}<br>`;
-  html+=`<b>Total Year Amount:</b> ₹${totalMeals*profiles[currentProfile].rate}`;
-  yearSummary.innerHTML=html;
-}
-
-initYearMonth(); renderProfiles();
-</script></body>
-</html>  updateSummary(key);
-}
-
-function setSelected(type){ window.selectedType=type; }
-
-function applyMeal(d,key,div){
-  if(!window.selectedType) return alert('Select meal type first');
-  profiles[currentProfile].data[key].days[d]=window.selectedType;
   saveData(); renderCalendar();
 }
 
